--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,14 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 .byebug_history
+node_modules/*
 
 .idea/*
+
+# Vite Ruby
+/public/vite*
+node_modules
+# Vite uses dotenv and suggests to ignore local-only env files. See
+# https://vitejs.dev/guide/env-and-mode.html#env-files
+*.local
+
