--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -40,19 +40,41 @@ jobs:
       - name: Run tests
         run: bin/rake
 
-  lint:
+#  lint:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v3
+#      - name: Install Ruby and gems
+#        uses: ruby/setup-ruby@55283cc23133118229fd3f97f9336ee23a179fcf # v1.146.0
+#        with:
+#          bundler-cache: true
+#      # Add or replace any other lints here
+#      - name: Security audit dependencies
+#        run: bin/bundler-audit --update
+#      - name: Security audit application code
+#        run: bin/brakeman -q -w2
+#      - name: Lint Ruby files
+#        run: bin/rubocop --parallel
+
+  linting:
+    timeout-minutes: 25
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Install Ruby and gems
-        uses: ruby/setup-ruby@55283cc23133118229fd3f97f9336ee23a179fcf # v1.146.0
+      - uses: actions/checkout@v3
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
-      # Add or replace any other lints here
-      - name: Security audit dependencies
-        run: bin/bundler-audit --update
-      - name: Security audit application code
-        run: bin/brakeman -q -w2
-      - name: Lint Ruby files
-        run: bin/rubocop --parallel
+      - name: Bundle install
+        run: bundle install
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: 'yarn'
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - run: yarn install --prefer-offline --frozen-lockfile # optional, --immutable
+      - name: Run linter
+        run: bundle exec ci/lint_check.rb
