--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Andrii Kuluiev <andreykuluev@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@hotwired/stimulus": "^3.2.2"
+    "@hotwired/stimulus": "^3.2.2",
+    "prettier": "^3.0.3"
   },
   "devDependencies": {}
 }
